[gd_scene load_steps=9 format=3 uid="uid://c21c1vgwvvi0n"]

[ext_resource type="TileSet" uid="uid://c14gl6p4l68dx" path="res://assets/new_tile_set.tres" id="1_ljyn7"]
[ext_resource type="Texture2D" uid="uid://6n3hhqgdoy8u" path="res://assets/sprites/inner_info_9rect.png" id="2_8ldtd"]
[ext_resource type="Script" path="res://scripts/util/tilemap_controller.gd" id="3_8js5x"]
[ext_resource type="Script" path="res://scripts/building_placer.gd" id="3_e8a6s"]
[ext_resource type="Texture2D" uid="uid://b2t7tc432a52e" path="res://assets/sprites/dash.png" id="3_f7bie"]
[ext_resource type="Script" path="res://scripts/util/camera_controller.gd" id="4_neyx2"]
[ext_resource type="Texture2D" uid="uid://d0a7tt6ag47qg" path="res://assets/sprites/buoy2.png" id="5_eries"]
[ext_resource type="Texture2D" uid="uid://rdtc257ea8ku" path="res://assets/sprites/sign1.png" id="6_co0lv"]

[node name="Game" type="Node"]

[node name="Tiles" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="Tiles"]
tile_set = ExtResource("1_ljyn7")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(1, 2, 0)
layer_1/name = "playArea"
layer_1/enabled = false
layer_1/tile_data = PackedInt32Array(0, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, 2, 2, 0, 1, 2, 0, 65537, 2, 0, 65536, 2, 0, 65538, 2, 0)

[node name="Node2D" type="Node2D" parent="Tiles"]

[node name="Sprite2D" type="Sprite2D" parent="Tiles/Node2D"]
self_modulate = Color(0.168627, 0.843137, 0.0313726, 1)
position = Vector2(-32, -30)
scale = Vector2(2, 2)
texture = ExtResource("2_8ldtd")

[node name="Sprite2D2" type="Sprite2D" parent="Tiles/Node2D"]
texture = ExtResource("3_f7bie")

[node name="Managers" type="Node" parent="."]

[node name="BuildingPlacer" type="Node" parent="Managers" node_paths=PackedStringArray("tile_helper", "hover_sprite")]
script = ExtResource("3_e8a6s")
tile_helper = NodePath("../TileMapController")
hover_sprite = NodePath("../../Tiles/Node2D/Sprite2D2")

[node name="TileMapController" type="Node2D" parent="Managers" node_paths=PackedStringArray("tilemap", "hoverSprite")]
script = ExtResource("3_8js5x")
tilemap = NodePath("../../Tiles/TileMap")
hoverSprite = NodePath("../../Tiles/Node2D/Sprite2D")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_neyx2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button3" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("5_eries")
icon_alignment = 1
expand_icon = true

[node name="Button4" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("6_co0lv")
icon_alignment = 1
expand_icon = true

[node name="Button5" type="Button" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("5_eries")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/Button3" to="Managers/BuildingPlacer" method="_on_select_building" binds= ["test1"]]
[connection signal="pressed" from="CanvasLayer/Control/Panel/HBoxContainer/Button4" to="Managers/BuildingPlacer" method="_on_select_building" binds= ["test2"]]
